[package]
name = "interactcli-rs"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To use 'RUSTFLAGS="$RUSTFLAGS -A dead_code" cargo build' not desplay dead_code warning

[dependencies]
clap = "3.1.7"
rustyline = "9.0.0"
shellwords = "1.1.0"
log = "0.4"
log4rs = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
cfg-if = "1.0"
memchr = "2.0"
rustyline-derive = "0.5.0"
lazy_static = "1.4.0"
config = "0.11.0"
yaml-rust = "0.4.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
prettytable-rs = "^0.8"
ssh2 = "0.9"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
anyhow = "1.0.45"
futures = "0.3.17"
fork = "0.1"
sysinfo = "0.21.2"
chrono = "0.4"
signal-hook = "0.3.12"


[[example]]
name = "sshsample"
path = "examples/sshsample.rs"

[[example]]
name = "configrs"
path = "examples/configrs.rs"

[[example]]
name = "yamlparser"
path = "examples/yamlparser.rs"