[package]
name = "interactcli-rs"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To use 'RUSTFLAGS="$RUSTFLAGS -A dead_code" cargo build' not desplay dead_code warning

[dependencies]
clap = "3.1.7"
rustyline = "9.1.2"
shellwords = "1.1.0"
log = "0.4.16"
log4rs = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8"
cfg-if = "1.0"
memchr = "2.4.1"
rustyline-derive = "0.6.0"
lazy_static = "1.4.0"
config = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
prettytable-rs = "^0.8"
anyhow = "1.0.56"
futures = "0.3.21"
fork = "0.1.19"
sysinfo = "0.23.6"
chrono = "0.4.19"
signal-hook = "0.3.13"


[[example]]
name = "sshsample"
path = "examples/sshsample.rs"

[[example]]
name = "configrs"
path = "examples/configrs.rs"

[[example]]
name = "yamlparser"
path = "examples/yamlparser.rs"